--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -106,6 +106,11 @@
         <mat-tab>
           <user-signing-strings></user-signing-strings>
         </mat-tab>
+
+        <mat-tab>
+          <agreements></agreements>
+        </mat-tab>
+
       </mat-tab-group>
     </div>
   </div>
