--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -288,7 +288,7 @@ $main-blue: #5383C3;
     display: flex;
     align-items: center;
     height: 50px;
-    padding-left: 30px;
+    padding-left: 5px;
     background-color: #F3F3F3;
     border-top: 1px solid rgba(0, 0, 0, 0.4);
     border-bottom: 1px solid rgba(0, 0, 0, 0.4);
@@ -315,12 +315,16 @@ $main-blue: #5383C3;
 
     &__label {
       margin: 0 20px;
+      height: 42px;
+      line-height: 52px;
+      padding-bottom: 3px;
       font-size: 12px;
       cursor: pointer;
+      border-bottom: 4px solid rgba(0,0,0,0);
 
       &--active {
         padding-bottom: 3px;
-        border-bottom: 2px solid #5B9BE1;
+        border-color: #2C98F0;
       }
     }
   }
