Update design of info side nav of advanced customer page

--- a/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.html
@@ -24,6 +24,7 @@
                 [selectedIndex]="selectedSecondaryIndex"
                 [ignoreUrl]="true"
                 (select)="setSecondaryIndex($event)">
+      <mat-icon class="info-icon" (click)="infoVisible = false">close</mat-icon>
     </tab-header>
 
     <mat-tab-group class="tab--no-header" [(selectedIndex)]="selectedSecondaryIndex">
