--- a/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.scss
+++ b/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.scss
@@ -1,4 +1,5 @@
 $content-height: calc(100vh - 225px);
+$info-width: 290px;
 
 .body {
   display: flex;
@@ -17,7 +18,7 @@ $content-height: calc(100vh - 225px);
     }
 
     &:last-of-type {
-      width: 290px;
+      width: $info-width;
       border-left: 1px solid rgba(0,0,0,0.12);
     }
 
@@ -30,13 +31,14 @@ $content-height: calc(100vh - 225px);
 
 customer-info, customer-info-notes {
   display: block;
+  width: $info-width;
   height: $content-height;
 }
 
 .info-icon {
   color: rgba(0,0,0,0.7);
   margin-left: auto;
-  margin-right: 25px;
+  margin-right: 20px;
   cursor: pointer;
 
   &--active {
