--- a/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-info/customer-info.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-info/customer-info.component.html
@@ -1,30 +1,51 @@
 <div class="body" *ngIf="_customer">
-  <div class="title">General</div>
-  <div class="text">{{_customer.phone}}</div>
-  <div class="text">{{_customer.email}}</div>
-
-  <div class="title">Payment</div>
-  <ng-container *ngFor="let card of _customer.creditCards">
-    <div class="card" [class.card--default]="_defaultCreditCard && (_defaultCreditCard.id === card.id)">
-      <img *ngIf="card.type !== 'OTHER'" src="{{'/assets/cards/' + (card.type || '').toLowerCase() + '.svg'}}">
-      <div>****{{card.lastFour}}</div>
-      <div>{{card.expiration}}</div>
+  <div class="section section--blue">
+    <div class="title">
+      <div>General</div>
+      <mat-icon class="edit-icon">edit</mat-icon>
     </div>
-  </ng-container>
+    <div class="label">Name</div>
+    <div class="text">{{_customer.firstName}} {{_customer.lastName}}</div>
+    <div class="label">Phone Number</div>
+    <div class="text">{{_customer.phone}}</div>
+    <div class="label">Email</div>
+    <div class="text">{{_customer.email}}</div>
+  </div>
 
-  <ng-container *ngIf="_defaultCreditCard">
-    <div class="title">Billing Address</div>
-    <div class="text">{{_defaultCreditCard.name}}</div>
-    <div class="text">{{_defaultCreditCard.address.line1}}</div>
-    <div class="text">{{_defaultCreditCard.address.line2}}</div>
-    <div class="text">{{_defaultCreditCard.address.city}}, {{_defaultCreditCard.address.state}} {{_defaultCreditCard.address.zip}}</div>
-    <div class="text">{{_defaultCreditCard.address.country}}</div>
-  </ng-container>
+  <div class="section">
+    <div class="title title--payment">
+      <div>Payment</div>
+      <mat-icon class="edit-icon">edit</mat-icon>
+    </div>
+    <ng-container *ngFor="let card of _customer.creditCards">
+      <div class="card" [class.card--default]="_defaultCreditCard && (_defaultCreditCard.id === card.id)">
+        <img *ngIf="card.type !== 'OTHER'" src="{{'/assets/cards/' + (card.type || '').toLowerCase() + '.svg'}}">
+        <div>****{{card.lastFour}}</div>
+        <div>{{card.expiration}}</div>
+      </div>
+    </ng-container>
 
-  <div class="title">Shipping Address</div>
-  <div class="text">{{_customer.firstName}} {{_customer.lastName}}</div>
-  <div class="text">{{_customer.address.line1}}</div>
-  <div class="text">{{_customer.address.line2}}</div>
-  <div class="text">{{_customer.address.city}}, {{_customer.address.state}} {{_customer.address.zip}}</div>
-  <div class="text">{{_customer.address.country}}</div>
+    <ng-container *ngIf="_defaultCreditCard">
+      <div class="label">Billing Address</div>
+      <div class="text">{{_defaultCreditCard.name}}</div>
+      <div class="text">{{_defaultCreditCard.address.line1}}</div>
+      <div class="text">{{_defaultCreditCard.address.line2}}</div>
+      <div class="text">{{_defaultCreditCard.address.city}}, {{_defaultCreditCard.address.state}} {{_defaultCreditCard.address.zip}}</div>
+      <div class="text">{{_defaultCreditCard.address.country}}</div>
+    </ng-container>
+  </div>
+
+  <div class="separator"></div>
+
+  <div class="section">
+    <div class="title">
+      <div>Shipping Address</div>
+      <mat-icon class="edit-icon">edit</mat-icon>
+    </div>
+    <div class="text">{{_customer.firstName}} {{_customer.lastName}}</div>
+    <div class="text">{{_customer.address.line1}}</div>
+    <div class="text">{{_customer.address.line2}}</div>
+    <div class="text">{{_customer.address.city}}, {{_customer.address.state}} {{_customer.address.zip}}</div>
+    <div class="text">{{_customer.address.country}}</div>
+  </div>
 </div>
