Initial work on advanced customer transaction table

--- a/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.html
@@ -11,7 +11,9 @@
     <mat-tab-group class="tab--no-header" [(selectedIndex)]="selectedIndex">
 
       <mat-tab></mat-tab>
-      <mat-tab></mat-tab>
+      <mat-tab>
+        <customer-advanced-transactions [customer]="entity"></customer-advanced-transactions>
+      </mat-tab>
       <mat-tab></mat-tab>
       <mat-tab></mat-tab>
       <mat-tab></mat-tab>
