--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
@@ -34,21 +34,21 @@
           <div class="segment">
             <img src="/assets/images/dashboard/person.svg">
             <div class="segment__content">
-              <div class="title" [routerLink]="['/profile']">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SETTINGS_TITLE' | translate}}</div>
+              <div class="title" (click)="navigateToAccountSettings()">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SETTINGS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SETTINGS_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
             <img src="/assets/images/dashboard/group_add.svg">
             <div class="segment__content">
-              <div class="title" [routerLink]="['/accounts/' + accountId]" fragment="users">{{'DASHBOARD_STATE_SETUP_ACCOUNT_INVITEUSERS_TITLE' | translate}}</div>
+              <div class="title" (click)="navigateToUsers()">{{'DASHBOARD_STATE_SETUP_ACCOUNT_INVITEUSERS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_ACCOUNT_INVITEUSERS_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
             <img src="/assets/images/dashboard/attach_money.svg">
             <div class="segment__content">
-              <div class="title" [routerLink]="['/']">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SUBSCRIPTIONS_TITLE' | translate}}</div>
+              <div class="title" (click)="navigateToSubscription()">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SUBSCRIPTIONS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SUBSCRIPTIONS_DESCRIPTION' | translate}}</div>
             </div>
           </div>
