--- a/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-info/customer-info.component.scss
+++ b/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-info/customer-info.component.scss
@@ -62,18 +62,31 @@
   .card {
     display: flex;
     align-items: center;
-    justify-content: space-between;
     margin-top: 5px;
-    padding: 5px 10px 5px 5px;
+    padding: 3px;
     font-size: 13px;
 
-    &--default {
-      background: rgba(0, 0, 0, 0.12);
-      border-radius: 4px;
+    img {
+      height: 48px;
     }
 
-    img {
-      height: 32px;
+    .info {
+      display: flex;
+      flex-direction: column;
+      margin-left: 15px;
+
+      div {
+        &:first-of-type {
+          font-size: 16px;
+          line-height: 24px;
+          font-weight: 500;
+        }
+
+        &:last-of-type {
+          font-size: 13px;
+          line-height: 24px;
+        }
+      }
     }
   }
 }
