--- a/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-info-notes/customer-info-notes.component.scss
+++ b/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-info-notes/customer-info-notes.component.scss
@@ -11,7 +11,7 @@
 
   .note {
     border-top: 1px solid rgba(0,0,0,0.12);
-    padding: 12px;
+    padding: 10px 12px;
     font-size: 13px;
     line-height: 24px;
 
@@ -21,11 +21,12 @@
 
     .author {
       display: inline-block;
-      margin: 8px 0 12px;
+      margin: 6px 0 12px;
       border-radius: 16px;
-      padding: 4px 16px;
+      padding: 0 14px;
       background: rgba(0,0,0,0.06);
       font-weight: 500;
+      font-size: 12px;
     }
   }
 
