--- a/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-transactions/customer-advanced-transactions.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-transactions/customer-advanced-transactions.component.html
@@ -3,6 +3,7 @@
     [title]="'Transactions'"
     [items]="transactions"
     [columnParams]="columnParams"
+    [rowColorFunction]="rowColorFunction"
     [options]="options"
     [bulkOptions]="bulkOptions"
     (itemClicked)="itemClicked($event)">
