--- a/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.scss
+++ b/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.scss
@@ -80,6 +80,19 @@
 
     td {
       font-size: 13px;
+
+      .cell-data-wrapper {
+        display: flex;
+        align-items: center;
+      }
+
+      .cell-icon {
+        margin-right: 5px;
+        border-radius: 50%;
+        height: 18px;
+        width: 18px;
+        font-size: 18px;
+      }
     }
 
     td, th {
