--- a/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.html
@@ -14,7 +14,9 @@
       <mat-tab>
         <customer-advanced-transactions [customer]="entity"></customer-advanced-transactions>
       </mat-tab>
-      <mat-tab></mat-tab>
+      <mat-tab>
+        <customer-advanced-rebills [customer]="entity"></customer-advanced-rebills>
+      </mat-tab>
       <mat-tab></mat-tab>
       <mat-tab></mat-tab>
 
