--- a/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.scss
+++ b/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.scss
@@ -108,6 +108,14 @@
       }
     }
 
+    .line-breaker {
+      background: #FFFCAB;
+      color: rgba(0, 0, 0, 0.4);
+      font-size: 13px;
+      font-weight: 500;
+      text-align: center;
+    }
+
     .clickable {
       cursor: pointer;
     }
