Initial work on customer fulfillments

--- a/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.html
@@ -17,7 +17,9 @@
       <mat-tab>
         <customer-advanced-rebills [customer]="entity"></customer-advanced-rebills>
       </mat-tab>
-      <mat-tab></mat-tab>
+      <mat-tab>
+        <customer-advanced-fulfillments [customer]="entity"></customer-advanced-fulfillments>
+      </mat-tab>
       <mat-tab></mat-tab>
 
     </mat-tab-group>
