Initial work on advanced customer activity

--- a/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.html
+++ b/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.html
@@ -10,25 +10,27 @@
 
     <div class="number-of">{{getNumberOfVisible()}} {{title}}</div>
 
-    <div class="selected"> {{getNumberOfSelected()}} Selected</div>
+    <ng-container *ngIf="bulkOptions">
+      <div class="selected"> {{getNumberOfSelected()}} Selected</div>
 
-    <div *ngIf="bulkOptions" class="bulk-options">
-      <div class="bulk-options__selection" [matMenuTriggerFor]="bulkOpts">
-        <span>{{selectedBulkOption || bulkOptions[0]}}</span> <mat-icon>keyboard_arrow_down</mat-icon>
+      <div class="bulk-options">
+        <div class="bulk-options__selection" [matMenuTriggerFor]="bulkOpts">
+          <span>{{selectedBulkOption || bulkOptions[0]}}</span> <mat-icon>keyboard_arrow_down</mat-icon>
+        </div>
+
+        <mat-menu #bulkOpts="matMenu" x-position="before">
+          <button mat-menu-item *ngFor="let option of bulkOptions" (click)="selectedBulkOption = option">{{ option | translate}}</button>
+        </mat-menu>
+
+        <button mat-button [disabled]="getNumberOfSelected() === 0">APPLY</button>
       </div>
-
-      <mat-menu #bulkOpts="matMenu" x-position="before">
-        <button mat-menu-item *ngFor="let option of bulkOptions" (click)="selectedBulkOption = option">{{ option | translate}}</button>
-      </mat-menu>
-
-      <button mat-button [disabled]="getNumberOfSelected() === 0">APPLY</button>
-    </div>
+    </ng-container>
   </div>
 
   <table>
     <thead>
       <tr>
-        <th><mat-checkbox (change)="globalCheckboxClicked($event)" class="checkbox-blue"></mat-checkbox></th>
+        <th *ngIf="bulkOptions"><mat-checkbox (change)="globalCheckboxClicked($event)" class="checkbox-blue"></mat-checkbox></th>
 
         <ng-container *ngFor="let param of columnParams">
           <th [class.cell--separator]="param.separator">
@@ -36,7 +38,7 @@
           </th>
         </ng-container>
 
-        <th class="options-header" *ngIf="options.length > 0"></th>
+        <th class="options-header" *ngIf="options && options.length > 0"></th>
       </tr>
     </thead>
 
@@ -49,7 +51,7 @@
         </tr>
 
         <tr *ngIf="!item['hideAfterFilter']" [style.background-color]="rowColorFunction ? rowColorFunction(item) : '#ffffff'">
-          <td><mat-checkbox [(ngModel)]="item.bulkSelected" class="checkbox-blue"></mat-checkbox></td>
+          <td *ngIf="bulkOptions"><mat-checkbox [(ngModel)]="item.bulkSelected" class="checkbox-blue"></mat-checkbox></td>
 
           <ng-container *ngFor ="let param of columnParams">
             <td [class.cell--separator]="param.separator"
@@ -72,7 +74,7 @@
             </td>
           </ng-container>
 
-          <td *ngIf="options.length > 0">
+          <td *ngIf="options && options.length > 0">
             <mat-icon class="menu-icon" [matMenuTriggerFor]="opts">more_vert</mat-icon>
             <mat-menu #opts="matMenu" x-position="before">
               <button mat-menu-item *ngFor="let option of options">{{ option | translate}}</button>
