--- a/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.html
+++ b/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-advanced-customer.component.html
@@ -20,7 +20,9 @@
       <mat-tab>
         <customer-advanced-fulfillments [customer]="entity"></customer-advanced-fulfillments>
       </mat-tab>
-      <mat-tab></mat-tab>
+      <mat-tab>
+        <customer-advanced-events [customer]="entity"></customer-advanced-events>
+      </mat-tab>
 
     </mat-tab-group>
   </div>
