--- a/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.scss
+++ b/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.scss
@@ -1,5 +1,6 @@
 .body {
-  padding: 15px 20px;
+  margin: 15px 20px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12);
 
   .heading {
     display: flex;
@@ -105,6 +106,16 @@
 
       &:last-of-type {
         padding-right: 20px;
+      }
+    }
+
+    tbody {
+      tr {
+        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+
+        &:last-of-type {
+          border-bottom: none;
+        }
       }
     }
 
