--- a/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-info-notes/customer-info-notes.component.scss
+++ b/src/app/pages/customer-advanced-page/customer-advanced-customer/customer-info-notes/customer-info-notes.component.scss
@@ -11,19 +11,21 @@
 
   .note {
     border-top: 1px solid rgba(0,0,0,0.06);
-    padding: 10px 24px 10px 12px;
-    font-size: 13px;
+    padding: 12px 24px 10px 12px;
     line-height: 24px;
+    color: #000000;
 
     .date {
       margin-top: 6px;
       margin-bottom: 6px;
       margin-left: 12px;
+      font-size: 13px;
       font-weight: 500;
     }
 
     .text {
       margin-left: 12px;
+      font-size: 14px;
     }
 
     .author {
