Format graph queries.

--- a/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
+++ b/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
@@ -30,9 +30,9 @@
         </tbody>
       </table>
 
-      <div class="field__example" *ngIf="!showQueryDetails">{{field.example}}</div>
+      <pre class="field__example" *ngIf="!showQueryDetails">{{field.example | formatGraphQl}}</pre>
     </div>
 
-    <side-container *ngIf="showQueryDetails" [example]="field.example"></side-container>
+    <side-container *ngIf="showQueryDetails" [example]="field.example | formatGraphQl"></side-container>
   </div>
 </div>
