Display side container on graphql-docs, update routing and some style changes.

--- a/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.scss
+++ b/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.scss
@@ -108,5 +108,18 @@
 
   &__container {
     display: flex;
+
+    .field__main {
+      width: 50%;
+    }
+  }
+
+  side-container{
+    width: 50%;
+    height: calc(100vh - 210px);
+  }
+
+  pre {
+    margin-top: 0;
   }
 }
