--- a/src/app/graph-qldocs-2/components/type-card/type-card.component.html
+++ b/src/app/graph-qldocs-2/components/type-card/type-card.component.html
@@ -1,4 +1,4 @@
-<div class="field">
+<div class="field" *ngIf="type">
   <div class="field__container">
     <div class="type__name">TYPE</div>
     <div class="field__name">
