--- a/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.html
+++ b/src/app/graph-qldocs-2/components/graphql-docs-2/graphql-docs-2.component.html
@@ -6,7 +6,15 @@
       <side-search [searchItems]="searchItems"></side-search>
     </div>
     <div class="docs__content">
-      <doc-type *ngFor="let type of types" [type]="type"></doc-type>
+      <ng-container *ngIf="isAll">
+        <doc-type *ngFor="let aType of types" [type]="aType" [isAll]="true"></doc-type>
+      </ng-container>
+      <ng-container *ngIf="isQuery || isMutation">
+        <doc-type [isMutation]="isMutation" [isQuery]="isQuery" [isType]=false [type]="type" [field]="field"></doc-type>
+      </ng-container>
+      <ng-container *ngIf="isType">
+        <type-card [isType]="isType" [type]="type" [field]="field"></type-card>
+      </ng-container>
     </div>
   </ng-template>
 </div>
