--- a/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
+++ b/src/app/graph-qldocs-2/components/query-mutation-card/query-mutation-card.component.html
@@ -1,11 +1,11 @@
 <div class="field">
-  <div [class.field__container]="showQueryDetails">
+  <div [class.field__container]="isQuery || isMutation">
     <div class="field__main">
       <div class="field__header">
         <div class="type__name">{{type.name}}</div>
         <div class="field__name">
           <div id="{{field.name}}">{{field.name}}</div>
-          <mat-icon class="link" matTooltip="" ngxClipboard (click)="showQueryDetails = !showQueryDetails">link</mat-icon>
+          <mat-icon class="link" matTooltip="" ngxClipboard (click)="navigateTo()">link</mat-icon>
         </div>
       </div>
 
@@ -30,9 +30,9 @@
         </tbody>
       </table>
 
-      <pre class="field__example" *ngIf="!showQueryDetails">{{field.example | formatGraphQl}}</pre>
+      <pre class="field__example" *ngIf="!(isQuery || isMutation)">{{field.example | formatGraphQl}}</pre>
     </div>
 
-    <side-container *ngIf="showQueryDetails" [example]="field.example | formatGraphQl"></side-container>
+    <side-container *ngIf="isQuery || isMutation" [example]="field.example"></side-container>
   </div>
 </div>
