--- a/src/app/graph-qldocs-2/components/side-container/side-container.component.html
+++ b/src/app/graph-qldocs-2/components/side-container/side-container.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="details">
     <div class="title">QUERY</div>
-    <div>{{example}}</div>
+    <pre>{{example | formatGraphQl}}</pre>
   </div>
   <div class="line"></div>
   <div class="details">
