Inital work on customer service subs/orders

--- a/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.html
+++ b/src/app/pages/components/table-memory-advanced/table-memory-advanced.component.html
@@ -25,6 +25,8 @@
         <button mat-button [disabled]="getNumberOfSelected() === 0">APPLY</button>
       </div>
     </ng-container>
+
+    <ng-content></ng-content>
   </div>
 
   <table>
