--- a/src/app/orders/create-order/create-order.component.html
+++ b/src/app/orders/create-order/create-order.component.html
@@ -95,16 +95,22 @@
 
             <div class="expansion-body">
 
-              <mat-form-field class="autocomplete-input-container">
-                <input type="text" matInput placeholder="Choose Campaign" [matAutocomplete]="autoCampaign" (input)="campaignInputChanged($event)">
+              <div *ngIf="hasNoCampaigns; else campaignsinput">
+                You have no Campaigns, please create <span class="new-campaign-link" (click)="navigateToNewCampaign()">new Campaign</span>.
+              </div>
 
-                <mat-autocomplete #autoCampaign="matAutocomplete" [displayWith]="displayFn" (optionSelected)="campaignSelected($event)">
-                  <mat-option *ngFor="let campaign of campaigns" [value]="campaign">
-                    <div>{{ campaign.name }} </div>
-                  </mat-option>
-                </mat-autocomplete>
+              <ng-template #campaignsinput>
+                <mat-form-field class="autocomplete-input-container">
+                  <input type="text" matInput placeholder="Choose Campaign" [matAutocomplete]="autoCampaign" (input)="campaignInputChanged($event)">
 
-              </mat-form-field>
+                  <mat-autocomplete #autoCampaign="matAutocomplete" [displayWith]="displayFn" (optionSelected)="campaignSelected($event)">
+                    <mat-option *ngFor="let campaign of campaigns" [value]="campaign">
+                      <div>{{ campaign.name }} </div>
+                    </mat-option>
+                  </mat-autocomplete>
+
+                </mat-form-field>
+              </ng-template>
 
             </div>
 
